@@ -50,7 +50,7 @@ detailtile = 4
 pagesource = EmberTerrain
 pagesize = 257
 tilesize = 65
-maxpixelerror = 10
+maxpixelerror = 15
 maxmipmaplevel = 5
 vertexnormals = false
 vertexcolours = false
