@@ -39,30 +39,33 @@ Sky::Sky(Ogre::Camera* camera, Ogre::SceneManager* sceneMgr)
 	}
 	sceneMgr->setFog( Ogre::FOG_LINEAR, fadeColour, .001, fogstartDistance, 256);
   
-  	
-	//set up values for the splatting shader and the linear fog shader
-	Ogre::HighLevelGpuProgramPtr splatProgram = Ogre::HighLevelGpuProgramManager::getSingleton().getByName("splat_cg");
-	if (!splatProgram.isNull()) {
-		splatProgram->load();
-//		splatProgram->createParameters();
-		Ogre::GpuProgramParametersSharedPtr fpParams = splatProgram->getDefaultParameters();
-		fpParams->setAutoAddParamName(true);
-		Ogre::ColourValue fogColour = sceneMgr->getFogColour();
-		fpParams->setNamedConstant("iFogColour",  fogColour);
-	}
+  	try {
+		//set up values for the splatting shader and the linear fog shader
+		Ogre::HighLevelGpuProgramPtr splatProgram = Ogre::HighLevelGpuProgramManager::getSingleton().getByName("splat_cg");
+		if (!splatProgram.isNull() && splatProgram->isSupported()) {
+			splatProgram->load();
+	//		splatProgram->createParameters();
+			Ogre::GpuProgramParametersSharedPtr fpParams = splatProgram->getDefaultParameters();
+			fpParams->setAutoAddParamName(true);
+			Ogre::ColourValue fogColour = sceneMgr->getFogColour();
+			fpParams->setNamedConstant("iFogColour",  fogColour);
+		}
+	} catch (...) {}
 	
-	Ogre::HighLevelGpuProgramPtr fogProgram = Ogre::HighLevelGpuProgramManager::getSingleton().getByName("fog_linear_vp");
-	if (!fogProgram.isNull()) {
-		fogProgram->load();
-//		fogProgram->createParameters();
-		Ogre::GpuProgramParametersSharedPtr vpParams = fogProgram->getDefaultParameters();
-		vpParams->setAutoAddParamName(true);
-		Ogre::ColourValue fogColour = sceneMgr->getFogColour();
-		vpParams->setNamedAutoConstant("worldViewProj",  Ogre::GpuProgramParameters::ACT_WORLDVIEWPROJ_MATRIX);
-		//get the values for the linear fog from the SceneManager
-		vpParams->setNamedConstant("iFogStart",  sceneMgr->getFogStart());
-		vpParams->setNamedConstant("iFogMax",  sceneMgr->getFogEnd());
-	}
+  	try {
+		Ogre::HighLevelGpuProgramPtr fogProgram = Ogre::HighLevelGpuProgramManager::getSingleton().getByName("fog_linear_vp");
+		if (!fogProgram.isNull() && fogProgram->isSupported()) {
+			fogProgram->load();
+	//		fogProgram->createParameters();
+			Ogre::GpuProgramParametersSharedPtr vpParams = fogProgram->getDefaultParameters();
+			vpParams->setAutoAddParamName(true);
+			Ogre::ColourValue fogColour = sceneMgr->getFogColour();
+			vpParams->setNamedAutoConstant("worldViewProj",  Ogre::GpuProgramParameters::ACT_WORLDVIEWPROJ_MATRIX);
+			//get the values for the linear fog from the SceneManager
+			vpParams->setNamedConstant("iFogStart",  sceneMgr->getFogStart());
+			vpParams->setNamedConstant("iFogMax",  sceneMgr->getFogEnd());
+		}
+	} catch (...) {}
 
 }
 
